@@ -1,3 +1,8 @@
+2011-08-30 belangeo <belangeo@gmail.com>
+
+    * Added new object : WinTable. Generates different kind of windowing functions. 
+    - rev 700
+
 2011-07-22 belangeo <belangeo@gmail.com>
 
     * Added new function : reducePoints(), apply a Douglas–Peucker curve reduction algorithm. 
